<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/day_picker_sunday"
        android:text="@string/sunday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_monday"
        android:text="@string/monday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_tuesday"
        android:text="@string/tuesday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_wednesday"
        android:text="@string/wednesday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_thursday"
        android:text="@string/thursday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_friday"
        android:text="@string/friday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/day_picker_saturday"
        android:text="@string/saturday"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
</LinearLayout>