<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/class_dialog_margin"
        android:paddingEnd="@dimen/class_dialog_margin"
        android:layout_height="match_parent">

        <!-- Class name -->
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/new_class_name"
            android:hint="@string/dialog_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Professor name -->
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/new_class_prof"
            android:hint="@string/dialog_prof_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Building -->
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/new_class_building"
            android:hint="@string/dialog_building_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Class time and days button -->
        <LinearLayout
            android:id="@+id/new_class_time_days_root"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dialog_time_from"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_class_from_time_hour"
                android:maxLength="2"
                android:layout_marginStart="14dp"
                android:hint="@string/dialog_time_hint"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/new_class_from_time_colon"
                android:text="@string/dialog_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_class_from_time_min"
                android:maxLength="2"
                android:hint="@string/dialog_time_hint"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="5dp"
                android:layout_height="5dp"/>
            <Spinner
                android:id="@+id/new_class_from_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dialog_time_to"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_class_to_time_hour"
                android:maxLength="2"
                android:hint="@string/dialog_time_hint"
                android:layout_marginStart="36dp"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/new_class_to_time_colon"
                android:text="@string/dialog_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_class_to_time_min"
                android:maxLength="2"
                android:hint="@string/dialog_time_hint"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="5dp"
                android:layout_height="5dp" />
            <Spinner
                android:id="@+id/new_class_to_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <!-- Days checkboxes -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_sun"
                    android:gravity="center_vertical"
                    android:text="@string/sunday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_mon"
                    android:gravity="center_vertical"
                    android:text="@string/monday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_tue"
                    android:gravity="center_vertical"
                    android:text="@string/tuesday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_wed"
                    android:gravity="center_vertical"
                    android:text="@string/wednesday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_thu"
                    android:gravity="center_vertical"
                    android:text="@string/thursday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_fri"
                    android:gravity="center_vertical"
                    android:text="@string/friday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_sat"
                    android:gravity="center_vertical"
                    android:text="@string/saturday"
                    android:textSize="0sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>